--- a/views/booking_dashboard.js.erb
+++ b/views/booking_dashboard.js.erb
@@ -11,58 +11,34 @@ require(['jquery','charts'], function($, Chart) {
             strokeColor: "rgba(220,220,220,0.8)",
             highlightFill: "rgba(220,220,220,0.75)",
             highlightStroke: "rgba(220,220,220,1)",
-            data: [65, 59, 80, 81, 56, 55, 40]
+            data: [ <% @reservations_by_weekday.each do |key,value| %><%=value%>,<%end%>]                  
           }
         ]
     },
 
     reservationsByCategoryData : [
+      <% @reservations_by_category.each do |key, value| %>
       {
-        value: 300,
-        color:"#F7464A",
-        highlight: "#FF5A5E",
-        label: "Red"
+        value: <%=value[:value]%>,
+        color: '<%=value[:color]%>',
+        hightlight: '<%=value[:highlight]%>',
+        label: '<%=value[:label]%>'
       },
-      {
-        value: 50,
-        color: "#46BFBD",
-        highlight: "#5AD3D1",
-        label: "Green"
-      },
-      {
-        value: 100,
-        color: "#FDB45C",
-        highlight: "#FFC870",
-        label: "Yellow"
-      }
+      <% end %>
     ],
     reservationsByStateData : [
+      <% @reservations_by_status.each do |key, value| %>
       {
-        value: 150,        
-        color: "#46BFBD",
-        highlight: "#5AD3D1",
-        label: "Confirmadas"
+        value: <%=value[:value]%>,
+        color: '<%=value[:color]%>',
+        hightlight: '<%=value[:highlight]%>',
+        label: '<%=value[:label]%>'
       },
-      {
-        value: 5,
-        color:"#F7464A",
-        highlight: "#FF5A5E",
-        label: "Pendientes de confirmar"
-      },
-      {
-        value: 25,
-        color: "#FDB45C",
-        highlight: "#FFC870",
-        label: "Canceladas"
-      }
+      <% end %>
     ],
 
    last30DaysReservationsData : {
-     labels: ["01", "02", "03", "04", "05", "06", "07",
-             "08", "09", "10", "11", "12", "13", "14",
-             "15", "16", "17", "18", "19", "20", "21",
-             "22", "23", "24", "25", "26", "27", "28",
-             "29", "30"],
+     labels: [<% @last_30_days_reservations.each do |key, value|%><%=key%>,<%end%>],
      datasets: [
         {
             label: "My First dataset",
@@ -72,11 +48,7 @@ require(['jquery','charts'], function($, Chart) {
             pointStrokeColor: "#fff",
             pointHighlightFill: "#fff",
             pointHighlightStroke: "rgba(220,220,220,1)",
-            data: [3, 1, 1, 1, 2, 5, 7,
-                   1, 2, 1, 1, 2, 1, 1,
-                   3, 2, 7, 2, 2, 3, 2,
-                   3, 2, 1, 1, 2, 2, 1,
-                   2, 1
+            data: [<% @last_30_days_reservations.each do |key, value| %><%=value%>,<%end%>
                    ]
         }
      ]
