--- a/views/booking_dashboard.erb
+++ b/views/booking_dashboard.erb
@@ -5,7 +5,7 @@
   	</div>  
     <div class="grid_4" style="min-height: 10em">
       <div class="centered_text more_contrast_text" style="font-size:3em"><%=@received_reservations%></div>
-      <div class="centered_text smaller_text"><%=t.booking_dashboard.new_request%></div>
+      <div class="centered_text smaller_text"><%=t.booking_dashboard.received_reservations%></div>
     </div>      	
     <div class="grid_4" style="min-height: 10em">
     	<div class="centered_text more_contrast_text" style="font-size:3em"><%=@pending_confirmation_reservations%></div>
