--- a/views/_booking_management_resources.erb
+++ b/views/_booking_management_resources.erb
@@ -3,15 +3,18 @@
                      <table class="table">
                         <thead class="table-header">
                           <tr>
-                            <th class="table-cell left_text" scope="col" style="width:30%"><%=t.booking_management.form.booking_resources.item%></th>
+                            <th class="table-cell left_text" scope="col" style="width:15%"><%=t.booking_management.form.booking_resources.item%></th>
+                            <% if booking_item_family.named_resources %>
                             <th class="table-cell left_text" scope="col" style="width:30%"><%=t.booking_management.form.booking_resources.user%></th>
+                            <% end %>
                             <% if booking_item_family.height %>                            
-                            <th class="table-cell centered_text" scope="col" style="width:10%"><%=t.booking_management.form.booking_resources.height%></th>
+                            <th class="table-cell centered_text" scope="col" style="width:5%"><%=t.booking_management.form.booking_resources.height%></th>
                             <% end %>    
                             <% if booking_item_family.weight %>                       
-                            <th class="table-cell centered_text" scope="col" style="width:10%"><%=t.booking_management.form.booking_resources.weight%></th>
+                            <th class="table-cell centered_text" scope="col" style="width:5%"><%=t.booking_management.form.booking_resources.weight%></th>
                             <% end %>                            
-                            <th class="table-cell centered_text" scope="col" style="width:20%"><%=t.booking_management.form.booking_resources.resource%></th>                                  
+                            <th class="table-cell centered_text" scope="col" style="width:20%"><%=t.booking_management.form.booking_resources.resource%></th>
+                            <th class="table-cell" style="width:25%"></th>          
                           </tr>
                         </thead>
                         <tbody class="table-tbody">
@@ -19,13 +22,15 @@
                             <%% for (var resourceIdx=0; resourceIdx < entity.booking_lines[lineIdx].booking_line_resources.length; resourceIdx++) { %>
                             <tr class="table-row">
                                <td class="table-cell left_text"><%%=entity.booking_lines[lineIdx].item_id%> - <%%= entity.booking_lines[lineIdx].item_description %></td>
+                               <% if booking_item_family.named_resources %>
                                <td class="table-cell left_text">
                                  <form data-lineindex="<%%=lineIdx%>" data-resourceindex="<%%=resourceIdx%>">
                                    <input type="hidden" name="id" value="<%%=entity.booking_lines[lineIdx].booking_line_resources[resourceIdx].id%>"/>                                 
                                    <input class="fieldcontrol resource_user_name" type="text" maxlength="80" size="15" name="resource_user_name" value="<%%=entity.booking_lines[lineIdx].booking_line_resources[resourceIdx].resource_user_name%>"/>
                                    <input class="fieldcontrol resource_user_surname" type="text" maxlength="80" size="15" name="resource_user_surname" value="<%%=entity.booking_lines[lineIdx].booking_line_resources[resourceIdx].resource_user_surname %>"/>
                                  </form>                                  
-                               </td>                
+                               </td>    
+                               <% end %>            
                                <% if booking_item_family.height %>               
                                <td class="table-cell centered_text">
                                   <form data-lineindex="<%%=lineIdx%>" data-resourceindex="<%%=resourceIdx%>">
@@ -52,29 +57,18 @@
                                   </form>            
                                </td>
                                <% end %>
-                               <td class="table-cell centered_text"><%%= entity.booking_lines[lineIdx].booking_line_resources[resourceIdx].booking_item_reference %></td>
+                               <td class="table-cell centered_text">
+                                <form data-lineindex="<%%=lineIdx%>" data-resourceindex="<%%=resourceIdx%>">
+                                    <input type="hidden" name="id" value="<%%=entity.booking_lines[lineIdx].booking_line_resources[resourceIdx].id%>"/>
+                                    <select name="booking_item_reference" id="booking_item_reference_<%%=entity.booking_lines[lineIdx].booking_line_resources[resourceIdx].id%>" class="fieldcontrol booking_item_reference">
+                                    </select> 
+                                </form>  
+                               </td>
+                               <td class="table-cell">
+                               </td>
                             </tr>
                             <%% } %>
                           <%% } %>
                         </tbody>
                       </table>
-                  </div>    
-
-     <div class="container_12">
-       <div class="grid_6">
-         <div class="all-space" style="border:1px solid #EEE">
-            <div class="more_contrast_text top-margin bottom-margin" style="text-decoration:underline"><%= t.booking_management.form.planning_color.title %></div>
-            <form name="planning" class="overflow">
-              <input type="hidden" name="id" value="<%%=entity.id%>"/> 
-              <div class="formrow">
-                <input type="color" name="planning_color" value="<%%=entity.planning_color%>"/>
-              </div>
-              <div class="navigation-bar bottom-margin">
-                <div class="navigation-bar-crud-buttons right-float right-margin">
-                  <input type="submit" class="update-entity-button action-button entity-management-button" value="<%=t.entitymanagement.update%>"/>
-                </div>
-              </div> 
-            </form>
-          </div>
-       </div>
-     </div>                  
+                  </div>                  
