--- a/views/_booking_menu.erb
+++ b/views/_booking_menu.erb
@@ -48,7 +48,7 @@
         <li><a href='/admin/booking/booking-items'><%=t.booking_console.items%></a></li>
         <% if booking_activities %>
         <li><a href='/admin/booking/activities'><%=t.booking_console.activities%></a></li>                                
-        <% end %>
+        <% end %>       
         <li><a href='/admin/rates/adjust-prices'><%=t.booking_console.adjust_prices%></a></li>                        
       </ul>    
    </li>
@@ -82,8 +82,9 @@
         <li><a href='/admin/charges'><%=t.booking_console.receipts%></a></li>           
       </ul>    
    </li>
-   <li class='<%if ['/admin/booking/summary'].index(request.path)%>active <%end%>has-sub'><a href='#'><%=t.booking_console.statistics%></a>
+   <li class='<%if ['/admin/booking/summary','/admin/booking/monthly-occupation'].index(request.path)%>active <%end%>has-sub'><a href='#'><%=t.booking_console.statistics%></a>
       <ul>
+        <li><a href='/admin/booking/monthly-occupation'><%=t.booking_console.monthly_occupation%></a></li>          
         <li><a href='/admin/booking/summary'><%=t.booking_console.summary%></a></li>           
       </ul>    
    </li>             
